<resources>
    <string name="app_name">Gesundheits Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_ernaehrung">Ernährung</string>
    <string name="menu_fitness">Fitness Tracker</string>
    <string name="menu_notizen">Notizen</string>
    <string name="menu_medikamente">Medikamente</string>
    <string name="menu_notfallkontakte">Notfallkontakte</string>
    <string name="menu_erste_hilfe">Erste Hilfe</string>
</resources>