<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gesundheitsmanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ernaehrung"
        android:name="com.example.gesundheitsmanager.ui.ernaehrung.ErnaehrungFragment"
        android:label="@string/menu_ernaehrung"
        tools:layout="@layout/fragment_ernaehrung" />

    <fragment
        android:id="@+id/nav_fitness"
        android:name="com.example.gesundheitsmanager.ui.fitness.FitnessFragment"
        android:label="@string/menu_fitness"
        tools:layout="@layout/fragment_fitness" />

    <fragment
        android:id="@+id/nav_notizen"
        android:name="com.example.gesundheitsmanager.ui.notizen.NotizenFragment"
        android:label="@string/menu_notizen"
        tools:layout="@layout/fragment_notizen" />

    <fragment
        android:id="@+id/nav_medikamente"
        android:name="com.example.gesundheitsmanager.ui.medikamente.MedikamenteFragment"
        android:label="@string/menu_medikamente"
        tools:layout="@layout/fragment_medikamente" />

    <fragment
        android:id="@+id/nav_notfallkontakte"
        android:name="com.example.gesundheitsmanager.ui.notfallkontakte.NotfallkontakteFragment"
        android:label="@string/menu_notfallkontakte"
        tools:layout="@layout/fragment_notfallkontakte" />
</navigation>